--- a/3_Lezione 05-11-2024/es3.html
+++ b/3_Lezione 05-11-2024/es3.html
@@ -2,40 +2,40 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <title>Esempio tabella</title>
+    <title>Tabella di contatti</title>
   </head>
   <body>
-    <h1>Esempi di tabella Studenti</h1>
+    <h1>tabella di contatti</h1>
 
     <table border="1" cellpadding="5" cellspacing="0">
       <tr>
         <th>nome</th>
         <th>cognome</th>
-        <th>Età</th>
+        <th>Numero di telefono</th>
       </tr>
 
       <tr>
         <td>Mario</td>
         <td>Rossi</td>
-        <td>28</td>
+        <td>1111111</td>
       </tr>
 
       <tr>
         <td>Anna</td>
         <td>Verdi</td>
-        <td>22</td>
+        <td>3333333</td>
       </tr>
 
       <tr>
         <td>Luca</td>
         <td>Bianchi</td>
-        <td>19</td>
+        <td>44444444</td>
       </tr>
 
       <tr>
         <td>Nicola</td>
         <td>Marano</td>
-        <td>22</td>
+        <td>22222222</td>
       </tr>
     </table>
   </body>
