--- a/3_Lezione 05-11-2024/es8.html
+++ b/3_Lezione 05-11-2024/es8.html
@@ -25,7 +25,7 @@
       <input type="checkbox" id="musica" name="interessi" value="Musica" />
       <label for="musica">Musica</label><br />
       <input type="checkbox" id="lettura" name="interessi" value="Lettura" />
-      <label for="musica">Lettura</label><br /><br /><br />
+      <label for="musica">Lettura</label><br /><br />
 
       <input type="submit" value="Invia" />
     </form>
