--- a/5_Lezione 12-11-2024/es5.html
+++ b/5_Lezione 12-11-2024/es5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout con CSS Avanzato</title>
-    <link rel="stylesheet" href="Css_Avanzato.css">
+    <link rel="stylesheet" href="Css_Avanzato.css" />
   </head>
   <body>
     <div class="card">
