ottimizazione percorsi file

--- a/Lezioni/2_Lezione 31-10-2024/HTML/index9.html
+++ b/Lezioni/2_Lezione 31-10-2024/HTML/index9.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Prova con css</title>
-    <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="../CSS/css.css" />
   </head>
   <body>
     <header>
