--- a/Lezioni/2_Lezione 31-10-2024/HTML/index10.html
+++ b/Lezioni/2_Lezione 31-10-2024/HTML/index10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esempio di Pagina HTML con Collegamenti Ipertestuali</title>
-    <link rel="stylesheet" href="css2.css">
+    <link rel="stylesheet" href="../CSS/css2.css">
   </head>
   <body>
     <header>
