--- a/Lezioni/5_Lezione 12-11-2024/HTML/es1.html
+++ b/Lezioni/5_Lezione 12-11-2024/HTML/es1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Selettore file diretto</title>
-    <link rel="stylesheet" href="es1.css">
+    <link rel="stylesheet" href="../CSS/es1.css">
   </head>
   <body>
     <div>
