--- a/Lezioni/5_Lezione 12-11-2024/HTML/es2.html
+++ b/Lezioni/5_Lezione 12-11-2024/HTML/es2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Box mode</title>
 
-    <link rel="stylesheet" href="box.css" />
+    <link rel="stylesheet" href="../CSS/box.css" />
   </head>
   <body>
     <div class="box">Contenuto</div>
