--- a/Lezioni/5_Lezione 12-11-2024/HTML/es3.html
+++ b/Lezioni/5_Lezione 12-11-2024/HTML/es3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout con Flex</title>
-    <link rel="stylesheet" href="box.css" />
+    <link rel="stylesheet" href="../CSS/box.css" />
   </head>
   <body>
     <div class="container">
