--- a/Lezioni/7_Lezione 19_11_2024/HTML/index.html
+++ b/Lezioni/7_Lezione 19_11_2024/HTML/index.html
@@ -12,7 +12,7 @@
         <h1>Gestore Articoli</h1>7
 
         <div class="form">
-            <input type="text" id="tiolo" placeholder="tiolo dell'articolo">4
+            <input type="text" id="tiolo" placeholder="tiolo dell'articolo">
         </div>
     </div>
 </body>
