--- a/Lezioni/7_Lezione 19_11_2024/HTML/index2.html
+++ b/Lezioni/7_Lezione 19_11_2024/HTML/index2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambia colore di sfondo</title>7
-    <link rel="stylesheet" href="../CSS/style2.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cambia colore di sfondo</title>
+    <link rel="stylesheet" href="../CSS/style2.css" />
     <script src="../JS/script2.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <button id="colorButton">Cambia colore</button>
+      <button id="colorButton">Cambia colore</button>
     </div>
-</body>
+  </body>
 </html>
