add code of 7 lesson

--- a/Lezioni/7_Lezione 19_11_2024/HTML/index2.html
+++ b/Lezioni/7_Lezione 19_11_2024/HTML/index2.html
@@ -6,6 +6,7 @@
     <title>Cambia colore di sfondo</title>
     <link rel="stylesheet" href="../CSS/style2.css" />
     <script src="../JS/script2.js" defer></script>
+    <script src="../JS/script2arow.js" defer></script>
   </head>
   <body>
     <div class="container">
