--- a/Lezioni/8_Lezione 21_11_2024/HTML/es2.html
+++ b/Lezioni/8_Lezione 21_11_2024/HTML/es2.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asynchronous Example</title>
-    <script src="../JS/script1countdown.js" defer></script>
+    <script src="../JS/script2.js" defer></script>
   </head>
   <body>
     <h1>Concetto di asincronismo</h1>
-    <button id="startButton">Avvia</button>
-    <p id="output"></p>
+    <button id="startTimer">Avvia Timer</button>
+    <button id="stopTimer">Ferma Timer</button>
+    <button id="resetTimer">Resetta Timer</button>
+    <p id="Timer">0</p>
   </body>
 </html>
