--- a/Lezioni/8_Lezione 21_11_2024/HTML/es.1/es1countdown.html
+++ b/Lezioni/8_Lezione 21_11_2024/HTML/es.1/es1countdown.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asynchronous Example</title>
-    <script src="../JS/script1countdown.js" defer></script>
+    <script src="../../JS/es.1/script1countdown.js" defer></script>
   </head>
   <body>
     <h1>Concetto di asincronismo</h1>
