--- a/Esercizio/index.html
+++ b/Esercizio/index.html
@@ -17,7 +17,7 @@
         <input type="text" id="surname" name="surname" required />
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required />
-        <button type="button" id="addButton">Aggiungi</button>
+        <button type="submit" id="addButton">Aggiungi</button>
         <button type="reset" id="clearButton">Pulisci</button>
       </form>
       <div id="errorMessage" class="error" hidden>
