--- a/Esercizio/index.html
+++ b/Esercizio/index.html
@@ -25,6 +25,7 @@
       </div>
       <h2>Lista Dinamica</h2>
       <ul id="dynamicList"></ul>
+      <button id="removeListButton">Rimuovi Lista</button>
     </div>
   </body>
 </html>
