--- a/Esercizio/index.html
+++ b/Esercizio/index.html
@@ -17,15 +17,17 @@
         <input type="text" id="surname" name="surname" required />
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required />
-        <button type="submit" id="addButton">Aggiungi</button>
-        <button type="reset" id="clearButton">Pulisci</button>
       </form>
       <div id="errorMessage" class="error" hidden>
         Errore: Compila tutti i campi!
       </div>
       <h2>Lista Dinamica</h2>
       <ul id="dynamicList"></ul>
-      <button id="removeListButton">Rimuovi Lista</button>
+      <div class="buttons-container">
+        <button type="submit" id="addButton" form="inputForm">Aggiungi</button>
+        <button type="reset" id="clearButton" form="inputForm">Pulisci</button>
+        <button id="removeListButton">Rimuovi Lista</button>
+      </div>
     </div>
   </body>
 </html>
