--- a/Lezioni/9_Lezione 26_11_2024/index.html
+++ b/Lezioni/9_Lezione 26_11_2024/index.html
@@ -7,7 +7,7 @@
     <!-- Definisce la codifica dei caratteri come UTF-8 per supportare caratteri speciali (accents, simboli, ecc.) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Imposta la viewport per un design reattivo (adatto a dispositivi mobili) -->
-    <title>Lista Dinamica</title>
+    <title>Lista Contatti</title>
     <!-- Imposta il titolo della pagina che appare nella scheda del browser -->
     <link rel="stylesheet" href="style.css" />
     <!-- Collega il file CSS esterno (style.css) per lo stile della pagina -->
@@ -23,7 +23,7 @@
   <body>
     <div class="container">
       <!-- Contenitore principale per il layout della pagina -->
-      <h1>Gestione Lista Dinamica</h1>
+      <h1>Gestione Lista Contatti</h1>
       <!-- Titolo principale della pagina -->
       <form id="inputForm">
         <!-- Inizia un modulo con id "inputForm" -->
@@ -49,7 +49,7 @@
         <!-- Messaggio di errore se uno o più campi non sono compilati -->
       </div>
 
-      <h2>Lista Dinamica</h2>
+      <h2>Lista Contatti</h2>
       <!-- Sottotitolo che indica la sezione per la lista -->
       <ul id="dynamicList"></ul>
       <!-- Lista non ordinata vuota che verrà popolata dinamicamente -->
